--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.danubetech</groupId>
+            <artifactId>java-sasl-xmpp-client-smack</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.igniterealtime.spark</groupId>
             <artifactId>spark-core</artifactId>
             <version>3.0.2</version>
